--- a/docker/dash-app/Dockerfile
+++ b/docker/dash-app/Dockerfile
@@ -1,9 +1,7 @@
-# dibimbing_project/docker/dash-app/Dockerfile
+# docker/dash-app/Dockerfile
 
+# Use Python 3.7 slim as base
 FROM python:3.7-slim
-
-# Set environment variables
-ENV PYTHONUNBUFFERED=1
 
 # Set working directory
 WORKDIR /app
@@ -13,15 +11,15 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies
-COPY ../../apps/dash-lastodash/requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy requirements and install Python dependencies
+COPY apps/dash-lastodash/requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
-# Copy Dash app
-COPY ../../apps/dash-lastodash /app
+# Copy application code
+COPY apps/dash-lastodash/ /app
 
 # Expose port
 EXPOSE 8050
 
-# Command to run Dash app
-CMD ["python", "lastodash.py"]
+# Run the Dash app with Gunicorn
+CMD ["gunicorn", "lastodash:server", "-b", "0.0.0.0:8050"]
