--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,7 +90,7 @@ services:
       - "8083:8080"  # Airflow Web UI
     volumes:
       - ./dags:/opt/airflow/dags
-      # - ./scripts:/opt/airflow/scripts  # Removed to prevent overwriting
+      - ./scripts:/opt/airflow/scripts  # Removed to prevent overwriting
       - ./spark-scripts:/spark-scripts
       - ./data:/resources/data
     command: ["airflow", "webserver"]
@@ -119,7 +119,7 @@ services:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
     volumes:
       - ./dags:/opt/airflow/dags
-      # - ./scripts:/opt/airflow/scripts  # Removed to prevent overwriting
+      - ./scripts:/opt/airflow/scripts  # Removed to prevent overwriting
       - ./spark-scripts:/spark-scripts
       - ./data:/resources/data
     command: ["airflow", "scheduler"]
